examples/test/testpolicy14247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14247
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key10: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value46
          key10: value15
          key2: value45
      podSelector:
        matchLabels:
          key25: value22
          key40: value9
